--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -9,30 +9,37 @@
     <link href="/static/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/base.css" rel="stylesheet">
   </head>
-    <body>
+
+  <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3 jumbotron">
-                <div class="text-center">
-                    <h1>{% block header_text %}{% endblock %}</h1>
-                    <form method="POST" action="{% block form_action %}{% endblock %}">
-                        <input name = "item_text" id = "id_new_item" class="form-control input-lg" placeholder="Enter a to-do item" />
-                        {% csrf_token %}
-                        {% if error %}
-                        <div>
-                            <span class="help-block">{{ error }}</span>
-                        </div>
-                        {% endif %}
-                    </form>
+
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 jumbotron">
+          <div class="text-center">
+            <h1>{% block header_text %}{% endblock %}</h1>
+            <form method="POST" action="{% block form_action %}{% endblock %}">
+              <input name="item_text" id="id_new_item"
+                     class="form-control input-lg"
+                     placeholder="Enter a to-do item" />
+              {% csrf_token %}
+              {% if error %}
+                <div class="form-group has-error">
+                  <span class="help-block">{{ error }}</span>
                 </div>
-            </div>
+              {% endif %}
+            </form>
+          </div>
         </div>
-        <div class="row">
-            <div class="col-md-6 col-md-offset-3">
-                {% block table %}
-                {% endblock %}
-            </div>
+      </div>
+
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+          {% block table %}
+          {% endblock %}
         </div>
+      </div>
+
     </div>
-    </body>
+  </body>
+
 </html>
