--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -22,7 +22,7 @@
               {% csrf_token %}
               {% if form.errors %}
                 <div class="form-group has-error">
-                  <div class="help-block">{{ form.text.errors }}</div>>
+                  <div class="help-block">{{ form.text.errors }}</div>
                 </div>
               {% endif %}
             </form>
@@ -36,8 +36,14 @@
           {% endblock %}
         </div>
       </div>
-
     </div>
+    <script src="/static/jquery-3.4.0.slim.min.js"></script>
+    <script src="/static/list.js"></script>
+
+    <script>
+      initialize();
+    </script>
+
   </body>
 
 </html>
