--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -14,7 +14,7 @@
     <div class="container">
 
       <nav class="navbar navbar-default" role="navigation">
-        <div class="container-floid">
+        <div class="container-fluid">
           <a class="navbar-brand" href="/">Superlists</a>
           {% if user.email %}
             <ul class="nav navbar-nav navbar-right">
@@ -22,11 +22,11 @@
               <li><a href="{% url 'logout' %}">Log out</a></li>
             </ul>
           {% else %}
-          <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
-            <span>Enter email to log in:</span>
-            <input class="form-control" name="email" type="text" />
-            {% csrf_token %}
-          </form>
+            <form class="navbar-form navbar-right" method="POST" action="{% url 'send_login_email' %}">
+              <span>Enter email to log in:</span>
+              <input class="form-control" name="email" type="text" />
+              {% csrf_token %}
+            </form>
           {% endif %}
         </div>
       </nav>
